--- a/assets/sass/design-system/logo.sass
+++ b/assets/sass/design-system/logo.sass
@@ -67,10 +67,10 @@
 @keyframes translateY
     0%
         transform: translateY(0)
-    20%
-        transform: translateY(calc(var(--translate-y)))
-    39.9%
-        opacity: 1
+    // 20%
+    //     transform: translateY(calc(var(--translate-y)))
+    // 39.9%
+    //     opacity: 1
     40%
         transform: translateY(0)
         opacity: var(--opacity)
