--- a/assets/sass/section/posts.sass
+++ b/assets/sass/section/posts.sass
@@ -58,3 +58,7 @@
             opacity: 0
         &:hover::after
             opacity: 1
+
+.section-sidebar
+    --border-width: 1px
+    --color-text-alt: var(--color-text)
