--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -47,6 +47,13 @@ $body-line-height-desktop: 1.5
 $meta-size-desktop: pxToRem(19)
 $meta-line-height-desktop: 1.1
 
+$quote-size-desktop-short: $lead-size-desktop
+$quote-size-desktop-long: $lead-size-desktop
+$quote-size-desktop: $lead-size-desktop
+$quote-size: $lead-size
+$quote-line-height: $lead-line-height-desktop
+$quote-line-height-desktop: $lead-line-height-desktop
+
 // Design System
 
 $header-background: $color-background-alt
