--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -13,9 +13,11 @@
 
 @import "blocks/title"
 @import "blocks/pagination"
+@import "blocks/definitions"
 
 @import "section/home"
 @import "section/categories"
 @import "section/persons"
 @import "section/projects"
+@import "section/posts"
 @import "section/posts"
