--- a/assets/sass/section/persons.sass
+++ b/assets/sass/section/persons.sass
@@ -1,2 +1,8 @@
 // .avatar
 //     filter: grayscale(1)
+
+article.person
+    .person-name
+        @include h5
+    .description
+        @include body-text
