--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -2,7 +2,7 @@
 
 $color-background: white
 $color-background-alt: #DDC4F7
-$color-accent: #BC8AF0
+$color-accent: #8C38E4
 $color-border: var(--color-text)
 
 // Typography
