--- a/assets/sass/section/projects.sass
+++ b/assets/sass/section/projects.sass
@@ -18,6 +18,9 @@
             order: 2
         > .container
             margin-top: 0
+    @include media-breakpoint-up(desktop)
+        .hero
+            margin-bottom: $spacing-4
     @include media-breakpoint-down(desktop)
         .has-breadcrumb-hero-start
             margin-bottom: 0
@@ -105,5 +108,7 @@
                         margin-left: offset(4)
 
 .project
+    &:hover
+        --color-text: var(--color-accent)
     time
         color: var(--color-text)
