--- a/assets/sass/section/home.sass
+++ b/assets/sass/section/home.sass
@@ -34,6 +34,9 @@
                     width: columns(3)
                     padding-left: $spacing-3
                     padding-right: $spacing-3
+                    .avatar
+                        filter: grayscale(1)
+                        mix-blend-mode: multiply
         .block-projects--grid
             .container
                 padding-left: 0
