--- a/assets/sass/section/home.sass
+++ b/assets/sass/section/home.sass
@@ -20,7 +20,7 @@
                 margin-right: auto
                 margin-top: $spacing-5
                 width: var(--grid-gutter)
-    .block:first-child.block-persons--grid
+    main .block:first-child.block-persons--grid
         padding-top: $spacing-3
     @include media-breakpoint-up(desktop)
         .block-persons--grid
