--- a/assets/sass/section/projects.sass
+++ b/assets/sass/section/projects.sass
@@ -109,6 +109,7 @@
 
 .project
     &:hover
-        --color-text: var(--color-accent)
+        .project-title
+            --color-text: var(--color-accent)
     time
         color: var(--color-text)
