--- a/assets/sass/section/home.sass
+++ b/assets/sass/section/home.sass
@@ -22,6 +22,7 @@
                 width: var(--grid-gutter)
     main .block:first-child.block-persons--grid
         padding-top: $spacing-3
+        margin-top: 0
     @include media-breakpoint-up(desktop)
         .block-persons--grid
             background: var(--color-background-alt)
